install_data(
  files(
    'capsicum.txt',
    'design.html',
    'design.txt',
    'faq.html',
    'faq.txt',
    'formats.txt',
    'manual.txt',
    'perl.txt',
    'signals.txt',
    'special_vars.txt',
    'startup-HOWTO.html',
    'startup-HOWTO.txt',
  ),
  install_dir : docdir)

subdir('help')
